package name changed

--- a/开发日志.md
+++ b/开发日志.md
@@ -109,5 +109,9 @@
 - [ ] 把音频解析模块 替换成 `music-matadata` 
   这玩意整了好久，最后发现有现成的，而且之前我还看过。为啥就忘了呢。。。
   > [npmjs.org](https://www.npmjs.com/package/music-metadata)
+- [ ] 报错 安装 music-matadata并引入之后 引发报错
+  ```
+  'parseFile' is not exported by node_modules/music-metadata/lib/core.js, imported by src/main/api/getTags.ts
+  ```
 
 // todo ... ╯︿╰
